--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "postcss-loader": "^1.1.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router": "3.0.5",
+    "redux": "^3.7.0",
+    "redux-storage": "^4.1.2",
+    "redux-storage-engine-localstorage": "^1.1.4",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
@@ -40,6 +44,7 @@
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.3",
     "postcss-loader": "^1.3.3",
+    "redux-devtools": "^3.4.0",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
