--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^3.7.0",
     "redux-storage": "^4.1.2",
     "redux-storage-engine-localstorage": "^1.1.4",
+    "redux-undo": "^0.6.1",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
