--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index",
-        "build": "webpack --config webpack.config.prod.js --progress --colors"
+        "build": "webpack --config webpack.config.dev.js --progress --colors"
     },
     "author": "",
     "license": "ISC",
