--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-    "name": "lecture_react_webpack",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index",
-        "build": "webpack --config webpack.config.dev.js --progress --colors"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "history": "^3.3.0",
-        "react": "^15.5.4",
-        "react-dom": "^15.5.4",
-        "react-redux": "^5.0.5",
-        "react-router": "3.0.5",
-        "redux": "^3.7.0",
-        "redux-persist": "^4.8.0",
-        "redux-undo": "^0.6.1"
-    },
-    "devDependencies": {
-        "autoprefixer": "^6.7.7",
-        "babel-core": "^6.24.1",
-        "babel-loader": "^7.0.0",
-        "babel-plugin-transform-object-rest-spread": "^6.23.0",
-        "babel-polyfill": "^6.23.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-react-hmre": "^1.1.1",
-        "babel-preset-stage-3": "^6.24.1",
-        "babel-register": "^6.24.1",
-        "classnames": "^2.2.5",
-        "css-loader": "^0.28.1",
-        "express": "^4.15.3",
-        "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.11.1",
-        "image-webpack-loader": "^3.3.1",
-        "mz": "^2.6.0",
-        "postcss": "^5.2.17",
-        "postcss-initial": "^1.5.3",
-        "postcss-loader": "^1.3.3",
-        "redux-devtools": "^3.4.0",
-        "style-loader": "^0.17.0",
-        "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.1",
-        "uglifyjs": "^2.4.10",
-        "url-loader": "^0.5.9",
-        "webpack": "^2.4.1",
-        "webpack-dev-middleware": "^1.10.2",
-        "webpack-hot-middleware": "^2.18.0"
-    }
+  "name": "lecture_react_webpack",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
+    "build": "webpack --config webpack.config.prod.js --progress --colors"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "history": "^3.3.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router": "3.0.5",
+    "redux": "^3.7.0",
+    "redux-persist": "^4.8.0",
+    "redux-undo": "^0.6.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.1",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "image-webpack-loader": "^3.3.1",
+    "mz": "^2.6.0",
+    "postcss": "^5.2.17",
+    "postcss-initial": "^1.5.3",
+    "postcss-loader": "^1.3.3",
+    "redux-devtools": "^3.4.0",
+    "style-loader": "^0.17.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "uglifyjs": "^2.4.10",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
+  }
 }
