--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
-    "build": "webpack --config webpack.config.prod.js --progress --colors"
+    "build": "webpack --config webpack.config.prod.js --progress --colors",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
@@ -38,6 +41,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.1",
+    "jest": "^20.0.4",
     "mz": "^2.6.0",
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.3",
