--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index",
     "build": "webpack --config webpack.config.prod.js --progress --colors",
-    "test": "jest",
     "test:watch": "npm test -- --watch"
   },
   "author": "",
@@ -37,6 +36,7 @@
     "babel-register": "^6.24.1",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.1",
+    "enzyme": "^2.9.1",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
@@ -46,6 +46,7 @@
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.3",
     "postcss-loader": "^1.3.3",
+    "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
