--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node index",
-    "build": "webpack --config webpack.config.prod.js --progress --colors",
+    "build": "node build && webpack --config webpack.config.prod.js --progress --colors",
     "test:watch": "npm test -- --watch"
   },
   "author": "",
@@ -42,6 +42,7 @@
     "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.1",
     "jest": "^20.0.4",
+    "make-runnable": "^1.3.6",
     "mz": "^2.6.0",
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.3",
