--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "history": "^3.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
     "react-router": "3.0.5",
     "redux": "^3.7.0",
