--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "jest",
     "start": "node index",
-    "build": "node build && webpack --config webpack.config.prod.js --progress --colors",
-    "test:watch": "npm test -- --watch"
+    "build": "node scripts/build.js && webpack --config webpack.config.prod.js --progress --colors",
+    "test:watch": "npm test -- --watch",
+    "build:langs": "babel scripts/translate.js | node"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "accept-language": "^3.0.17",
+    "cookie-parser": "^1.4.3",
     "history": "^3.3.0",
+    "js-cookie": "^2.1.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-intl": "^2.3.0",
@@ -24,9 +28,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-react-intl": "^2.3.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
