--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test:watch": "npm test -- --watch",
     "build:langs": "babel scripts/translate.js | node"
   },
-  "author": "",
+  "jest": {
+      "transform": {".*": "<rootDir>/node_modules/jest-css-modules"}
+  },
+  "author": "Yurii Lyskov",
   "license": "ISC",
   "dependencies": {
     "accept-language": "^3.0.17",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
@@ -51,11 +55,13 @@
     "jest": "^20.0.4",
     "make-runnable": "^1.3.6",
     "mz": "^2.6.0",
+    "node-sass": "^4.5.3",
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.3",
     "postcss-loader": "^1.3.3",
     "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
