--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test:watch": "npm test -- --watch",
     "build:langs": "babel scripts/translate.js | node"
   },
-  "jest": {
-      "transform": {".*": "<rootDir>/node_modules/jest-css-modules"}
-  },
   "author": "Yurii Lyskov",
   "license": "ISC",
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(scss|css|less)$": "identity-obj-proxy"
+    }
+  },
   "dependencies": {
     "accept-language": "^3.0.17",
     "cookie-parser": "^1.4.3",
@@ -51,6 +54,7 @@
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^3.3.1",
     "jest": "^20.0.4",
     "make-runnable": "^1.3.6",
