--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
             ]
         },
         "production": {
+            /* TODO: fix build: Element type is invalid: expected a string (for built-in components) or a class/function */
             /*"presets": ["react-optimize"]*/
         },
         "targets": {
